apps/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: homepage
  annotations:
    cert-manager.io/common-name: "home.lab"
spec:
  rules:
  - host: home.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homepage
            port:
              number: 3000
  tls:
  - hosts:
    - home.lab
    secretName: homepage-tls
